packages/svelte/test/validator/samples/illegal-attribute-character/input.svelte
<script>
    import C from './irrelevant';
</script>

<button on:click />
<button xml:click />
<button xmlns:click />
<button xlink:click />
<C on:click />
<C xml:click />
<C xmlns:click />
<C xlink:click />

<button foo:bar />
<C foo:bar />
