packages/svelte/test/compiler-errors/samples/component-slot-duplicate-error-2/main.svelte
<script>
	import Nested from './irrelevant';
</script>

<Nested>
	<svelte:fragment slot="foo">{value}</svelte:fragment>
	<svelte:fragment slot="foo">{value}</svelte:fragment>
</Nested>